// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorCoursesPageComponent should snap when it is undeletable and unrestorable 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  archivedCourses={[Function Array]}
  canDeleteAll="false"
  canRestoreAll="false"
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  instructorService={[Function InstructorService]}
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  modalService={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  tableSortBy="0"
  tableSortOrder={[Function Number]}
>
  <div>
    <button
      class="btn btn-primary"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><div
    class="course-section"
  >
    <h2
      class="text-muted"
    >
      <span
        class="fa fa-file-archive"
      />
       Archived Courses 
    </h2>
    <div
      class="card top-padded"
    >
      <div
        class="card-header archive-course-header bg-info"
        id="archived-table-heading"
      >
        <div
          class="row text-white align-items-center"
        >
          <div
            class="col-6"
          >
            <b>
              Archive
            </b>
          </div>
          <div
            class="col-6 text-right"
          >
            
            <i
              class="fas fa-chevron-down"
            />
            
          </div>
        </div>
      </div>
      
    </div>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h2
        class="text-muted"
      >
        <span
          class="fa fa-trash-alt"
        />
         Deleted Courses 
      </h2>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header recycle-bin-header"
          id="deleted-table-heading"
        >
          <div
            class="row align-items-center"
          >
            <div
              class="col-6 text-white"
            >
              <b>
                Recycle Bin
              </b>
            </div>
            <div
              class="col-6 text-right bin-header-button"
            >
              
              
              <button
                class="btn btn-light btn-sm disabled"
              >
                <i
                  class="fas fa-check"
                />
                 Restore All 
              </button>
              
              
              <button
                class="btn btn-light btn-sm disabled text-danger"
              >
                <i
                  class="fas fa-times"
                />
                 Delete All 
              </button>
              
              <i
                class="fas fa-chevron-down text-white"
              />
              
            </div>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with all courses in course stats 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  archivedCourses={[Function Array]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  instructorService={[Function InstructorService]}
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  modalService={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  tableSortBy="0"
  tableSortOrder={[Function Number]}
>
  <div>
    <button
      class="btn btn-primary"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><div
    class="course-section"
  >
    <h2
      class="text-muted"
    >
      <span
        class="fa fa-file-archive"
      />
       Archived Courses 
    </h2>
    <div
      class="card top-padded"
    >
      <div
        class="card-header archive-course-header bg-info"
        id="archived-table-heading"
      >
        <div
          class="row text-white align-items-center"
        >
          <div
            class="col-6"
          >
            <b>
              Archive
            </b>
          </div>
          <div
            class="col-6 text-right"
          >
            
            <i
              class="fas fa-chevron-down"
            />
            
          </div>
        </div>
      </div>
      
    </div>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h2
        class="text-muted"
      >
        <span
          class="fa fa-trash-alt"
        />
         Deleted Courses 
      </h2>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header recycle-bin-header"
          id="deleted-table-heading"
        >
          <div
            class="row align-items-center"
          >
            <div
              class="col-6 text-white"
            >
              <b>
                Recycle Bin
              </b>
            </div>
            <div
              class="col-6 text-right bin-header-button"
            >
              
              <button
                class="btn btn-light btn-sm"
                id="btn-restore-all"
                ngbtooltip="Restore all deleted courses and their corresponding students and sessions"
              >
                <i
                  class="fas fa-check"
                />
                 Restore All 
              </button>
              
              
              
              <button
                class="btn btn-light btn-sm text-danger"
                id="btn-delete-all"
                ngbtooltip="Permanently delete all courses and their corresponding students and sessions"
              >
                <i
                  class="fas fa-times"
                />
                 Delete All 
              </button>
              
              
              
              <i
                class="fas fa-chevron-down text-white"
              />
              
            </div>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with default fields 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  archivedCourses={[Function Array]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  instructorService={[Function InstructorService]}
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  modalService={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  tableSortBy="0"
  tableSortOrder={[Function Number]}
>
  <div>
    <button
      class="btn btn-primary"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with no courses in course stats 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  archivedCourses={[Function Array]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  instructorService={[Function InstructorService]}
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  modalService={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  tableSortBy="0"
  tableSortOrder={[Function Number]}
>
  <div>
    <button
      class="btn btn-primary"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-instructor-courses-page>
`;
